--- a/SleepQualityNotebook.ipynb
+++ b/SleepQualityNotebook.ipynb
@@ -43,7 +43,7 @@
     "\n",
     "# Auto-populate membership functions for antecedents (5 levels: poor, mediocre, average, decent, good)\n",
     "rhythm.automf(5)\n",
-    "stress.automf(5)\n",
+    "stress.automf(5, invert=True)\n",
     "duration.automf(5)\n",
     "environment.automf(5)\n",
     "\n",
