Fuzzy Jaccard Index

--- a/SleepQualityNotebook.ipynb
+++ b/SleepQualityNotebook.ipynb
@@ -270,12 +270,12 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-15T18:37:17.830019Z",
-     "start_time": "2024-11-15T18:37:17.814522Z"
+     "end_time": "2024-11-16T09:29:58.085732Z",
+     "start_time": "2024-11-16T09:29:58.083171Z"
     }
    },
    "source": [
-    "# Updated input_data dictionary based on the new table\n",
+    "# Middle aged man\n",
     "input_data = [\n",
     "    {\"rhythm\": 8, \"duration\": 9, \"stress\": 2, \"environment\": 10},\n",
     "    {\"rhythm\": 8, \"duration\": 7, \"stress\": 3, \"environment\": 5},\n",
@@ -361,8 +361,7 @@
    },
    "cell_type": "code",
    "source": [
-    "# Updated input_data dictionary based on the new table\n",
-    "input_data = [\n",
+    "input_data = [ # Student 1\n",
     "    {\"rhythm\": 5, \"duration\": 8, \"stress\": 9, \"environment\": 6},\n",
     "    {\"rhythm\": 8, \"duration\": 9, \"stress\": 3, \"environment\": 7},\n",
     "    {\"rhythm\": 6, \"duration\": 8, \"stress\": 4, \"environment\": 9},\n",
@@ -383,7 +382,7 @@
    },
    "cell_type": "code",
    "source": [
-    "input_data = [\n",
+    "input_data = [ # Student 2\n",
     "    {\"rhythm\": 3, \"duration\": 7, \"stress\": 5, \"environment\": 8},\n",
     "    {\"rhythm\": 6, \"duration\": 6, \"stress\": 2, \"environment\": 8},\n",
     "    {\"rhythm\": 8, \"duration\": 6, \"stress\": 3, \"environment\": 8},\n",
@@ -404,8 +403,7 @@
    },
    "cell_type": "code",
    "source": [
-    "# Updated input_data dictionary based on the new table\n",
-    "input_data = [\n",
+    "input_data = [ # Student 3\n",
     "    {\"rhythm\": 7, \"duration\": 5, \"stress\": 8, \"environment\": 4},\n",
     "    {\"rhythm\": 4, \"duration\": 6, \"stress\": 1.5, \"environment\": 6},\n",
     "    {\"rhythm\": 5.5, \"duration\": 7, \"stress\": 4, \"environment\": 6},\n",
@@ -426,7 +424,7 @@
    },
    "cell_type": "code",
    "source": [
-    "input_data = [\n",
+    "input_data = [ # Middle aged woman\n",
     "    {\"rhythm\": 9, \"duration\": 10, \"stress\": 5, \"environment\": 9},\n",
     "    {\"rhythm\": 8, \"duration\": 8, \"stress\": 3, \"environment\": 9},\n",
     "    {\"rhythm\": 7, \"duration\": 10, \"stress\": 2, \"environment\": 10},\n",
@@ -447,7 +445,7 @@
    },
    "cell_type": "code",
    "source": [
-    "inputs = [\n",
+    "inputs = [ # Student 4\n",
     "    {\"rhythm\": 2, \"stress\": 7, \"duration\": 6, \"environment\": 9},\n",
     "    {\"rhythm\": 8, \"stress\": 8, \"duration\": 3, \"environment\": 4},\n",
     "    {\"rhythm\": 8, \"stress\": 9, \"duration\": 7, \"environment\": 5},\n",
@@ -458,6 +456,167 @@
    ],
    "outputs": [],
    "execution_count": 273
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Check if prediction and actual values are matching"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-16T10:44:40.567278Z",
+     "start_time": "2024-11-16T10:44:40.559760Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# (y_hat, y) = (prediction, actual) Student 1\n",
+    "student1 = np.array([\n",
+    "    [4.60, 6.00],\n",
+    "    [7.20, 7.00],\n",
+    "    [7.70, 8.00],\n",
+    "    [6.70, 7.00],\n",
+    "    [6.30, 7.00],\n",
+    "    [5.50, 5.00]\n",
+    "])\n",
+    "student2 = np.array([\n",
+    "    [5.00, 6],\n",
+    "    [6.50, 7],\n",
+    "    [6.30, 7],\n",
+    "    [5.00, 7],\n",
+    "    [6.30, 8],\n",
+    "    [5.90, 6]\n",
+    "])\n",
+    "student3 = np.array([\n",
+    "    [3.70, 4],\n",
+    "    [6.20, 4],\n",
+    "    [6.00, 5.50],\n",
+    "    [6.30, 8],\n",
+    "    [3.70, 5],\n",
+    "    [8.00, 7]\n",
+    "])\n",
+    "student4 = np.array([\n",
+    "    [3.70, 5],\n",
+    "    [6.20, 5],\n",
+    "    [6.00, 6],\n",
+    "    [6.30, 7],\n",
+    "    [3.70, 5],\n",
+    "    [7.00, 9]\n",
+    "])\n",
+    "middle_aged_man = np.array([\n",
+    "    [7.90, 8],\n",
+    "    [6.30, 6],\n",
+    "    [5.90, 7.90],\n",
+    "    [6.30, 7],\n",
+    "    [8.20, 8],\n",
+    "    [7.70, 8]\n",
+    "])\n",
+    "middle_aged_women = np.array([\n",
+    "    [8.00, 9],\n",
+    "    [7.60, 8],\n",
+    "    [7.90, 9],\n",
+    "    [8.00, 9],\n",
+    "    [8.00, 10],\n",
+    "    [8.00, 9]\n",
+    "])\n",
+    "\n",
+    "data = np.vstack((student1, student2, student3, student4, middle_aged_man, middle_aged_women))\n",
+    "data = np.array([[5,5.5]])\n",
+    "\n",
+    "# Separate the columns for clarity\n",
+    "y_values = data[:, 0]\n",
+    "y_hat_values = data[:, 1]\n"
+   ],
+   "outputs": [],
+   "execution_count": 21
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-16T10:44:40.994655Z",
+     "start_time": "2024-11-16T10:44:40.991326Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "def calculate_membership_degrees(x_value):\n",
+    "    degrees = {}\n",
+    "    for label, term in sleep_quality.terms.items():\n",
+    "        mf = term.mf  # Get the membership function array\n",
+    "        degree = fuzz.interp_membership(sleep_quality.universe, mf, x_value)\n",
+    "        degrees[label] = degree\n",
+    "    return degrees\n",
+    "\n",
+    "def calculate_overlap_percentage(actual_degrees, predicted_degrees):\n",
+    "    labels = actual_degrees.keys()\n",
+    "    overlap_sum = 0\n",
+    "    total_sum = 0\n",
+    "    for label in labels:\n",
+    "        min_degree = min(actual_degrees[label], predicted_degrees[label])\n",
+    "        max_degree = max(actual_degrees[label], predicted_degrees[label])\n",
+    "        overlap_sum += min_degree\n",
+    "        total_sum += max_degree\n",
+    "    if total_sum == 0:\n",
+    "        return 0\n",
+    "    overlap_percentage = (overlap_sum / total_sum) * 100\n",
+    "    return overlap_percentage\n",
+    "\n",
+    "\n",
+    "# Calculate membership degrees for all y and y_hat values\n",
+    "results = []\n",
+    "\n",
+    "for y, y_hat in zip(y_values, y_hat_values):\n",
+    "    y_degrees = calculate_membership_degrees(y)\n",
+    "    y_hat_degrees = calculate_membership_degrees(y_hat)\n",
+    "    results.append({\n",
+    "        'y': y,\n",
+    "        'y_hat': y_hat,\n",
+    "        'y_degrees': y_degrees,\n",
+    "        'y_hat_degrees': y_hat_degrees\n",
+    "    })"
+   ],
+   "outputs": [],
+   "execution_count": 22
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-16T10:45:34.873681Z",
+     "start_time": "2024-11-16T10:45:34.870431Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "overlap_list = []\n",
+    "for idx, result in enumerate(results):\n",
+    "    y = result['y']\n",
+    "    y_hat = result['y_hat']\n",
+    "    y_degrees = result['y_degrees']\n",
+    "    y_hat_degrees = result['y_hat_degrees']\n",
+    "    overlap_percentage = calculate_overlap_percentage(y_degrees, y_hat_degrees)\n",
+    "    print(f\"Data Point {idx+1}:\")\n",
+    "    print(y_degrees)\n",
+    "    print(y_hat_degrees)\n",
+    "    print(f\"  Overlap Percentage: {overlap_percentage:.2f}%\\n\")\n",
+    "    overlap_list.append(overlap_percentage)\n",
+    "print(f\"Average Overlap Percentage: {np.mean(overlap_list):.2f}%\")\n"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data Point 1:\n",
+      "{'poor': 0.0, 'mediocre': 0.0, 'average': 1.0, 'decent': 0.0, 'good': 0.0}\n",
+      "{'poor': 0.0, 'mediocre': 0.0, 'average': 0.8, 'decent': 0.2, 'good': 0.0}\n",
+      "  Overlap Percentage: 66.67%\n",
+      "\n",
+      "Average Overlap Percentage: 66.67%\n"
+     ]
+    }
+   ],
+   "execution_count": 24
   },
   {
    "metadata": {},
